Fix z-index issue with menu and rename .label -> .lab

--- a/sass/blocks/_label.scss
+++ b/sass/blocks/_label.scss
@@ -1,4 +1,4 @@
-label, .label {
+label, .lab {
     @include font(sans, semibold);
     color: color-variation(black, lighten, 1);
     font-size: inherit;
