--- a/sass/blocks/_menu.scss
+++ b/sass/blocks/_menu.scss
@@ -6,61 +6,62 @@
     .menu-container {
         @include max-width($screen-lg);
         height: 50px;
-    }
+        z-index: 0;
 
-    .menu-logo {
-        @media (max-width: $screen-sm - 1) {
-            float: left;
+        .menu-logo {
+            z-index: 1000;
 
-            svg {
-                width: 60px;
+            @media (max-width: $screen-sm - 1) {
+                float: left;
+
+                svg {
+                    width: 60px;
+                }
             }
         }
-    }
 
-    .back, nav {
-        line-height: 50px;
+        .back, nav {
+            line-height: 50px;
 
-        a {
-            color: color-variation(grey, darken, 2);
-        }
-    }
-
-    .back a {
-        @extend .icon-left;
-
-        &:before {
-            font-size: 14px;
-            margin-right: 15px;
-            vertical-align: middle;
-        }
-
-        &:hover, &:focus {
-            text-decoration: none;
-
-            span {
-                text-decoration: underline;
+            a {
+                color: color-variation(grey, darken, 2);
             }
         }
-    }
 
-    nav {
-        a {
+        .back a {
+            @extend .icon-left;
+
             &:before {
-                display: inline-block;
-                margin: 0 10px -8px 5px;
-                border-left: 1px solid color-variation(black, lighten, 4);
-                height: 28px;
-                content: '';
+                font-size: 14px;
+                margin-right: 15px;
+                vertical-align: middle;
             }
 
-            &:first-of-type {
+            &:hover, &:focus {
+                text-decoration: none;
+
+                span {
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        nav {
+            a {
                 &:before {
-                    display: none;
+                    display: inline-block;
+                    margin: 0 10px -8px 5px;
+                    border-left: 1px solid color-variation(black, lighten, 4);
+                    height: 28px;
+                    content: '';
+                }
+
+                &:first-of-type {
+                    &:before {
+                        display: none;
+                    }
                 }
             }
         }
     }
-
-    color: #5a5a5a;
 }
